--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4"
     implementation 'com.google.firebase:firebase-firestore:24.3.1'
+
+    implementation 'com.github.brotoo25:firestore-coroutines:1.0.2'
+
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 }
