--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,9 @@ dependencies {
     implementation 'com.github.brotoo25:firestore-coroutines:1.0.2'
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    // Paging Compose
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
+    implementation "com.google.accompanist:accompanist-pager:0.13.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.13.0"
 }
