--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,7 @@ dependencies {
     implementation 'com.github.brotoo25:firestore-coroutines:1.0.2'
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    //pdf view
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 }
