--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,6 @@ dependencies {
     //pdf view
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.0'
 
+    implementation("io.coil-kt:coil-compose:1.3.1")
+
 }
